<resources>
    <string name="app_name">迅速</string>
    <string name="no_hint">序号（可选）</string>
    <string name="name_hint">名称</string>
    <string name="remark_hint">备注（可选）</string>
    <string name="url_hint">目标网址</string>
    <string name="type_hint">请求类型</string>
    <string name="params_hint">参数（可选）</string>
    <string name="headers_hint">请求头（可选）</string>
    <string name="body_hint">请求体（可选）</string>
    <string name="save_btn_text">保存</string>
    <string name="delete_btn_text">删除</string>
    <string name="package_list_title_edit_btn_text">编辑</string>
    <string name="package_list_title_delete_btn_text">删除</string>
    <string name="main_activity_label">迅速：制作属于你的脚本</string>
    <string name="main_activity_hint">点击发送，长按编辑</string>
    <string name="new_package_label">请求详情</string>
    <string name="new_script_label">脚本详情</string>
    <string name="adUnitId">ca-app-pub-2710237255954645/1954121449</string>
    <string-array name="request_type">
        <item>GET</item>
        <item>POST</item>
    </string-array>
</resources>
