<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#000"
            android:textColor="#fff"
            android:textSize="30sp"
            android:gravity="center_vertical"
            android:text="@string/new_package_label"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/packageNoText"
                    android:inputType="number"
                    android:hint="@string/no_hint"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
            />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/urlText"
                    android:inputType="textUri"
                    android:hint="@string/url_hint"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
            />

            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/typeSpin"
                    android:entries="@array/request_type"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_horizontal"
            />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/paramsText"
                    android:inputType="text"
                    android:hint="@string/params_hint"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
            />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/headersText"
                    android:inputType="text"
                    android:hint="@string/headers_hint"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
            />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/bodyText"
                    android:inputType="textUri"
                    android:hint="@string/body_hint"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
            />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/saveBtn"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/save_btn_text"
                    android:layout_margin="5dp"
            />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/deleteBtn"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/delete_btn_text"
                    android:layout_margin="30dp"
                    android:background="#f00"
                    android:textColor="#fff"
                    android:visibility="invisible"
            />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>