<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#000"
            android:textColor="#fff"
            android:textSize="30sp"
            android:gravity="center_vertical"
            android:text="@string/new_script_label"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/scriptNoText"
                    android:inputType="number"
                    android:hint="@string/no_hint"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
            />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/scriptNameText"
                    android:inputType="text"
                    android:hint="@string/name_hint"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
            />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/scriptRemarkText"
                    android:hint="@string/remark_hint"
                    android:inputType="text"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
            />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/saveBtn"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/save_btn_text"
                    android:layout_margin="20dp"
            />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>