<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#000"
            android:orientation="vertical"
    >
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="30sp"
                android:text="@string/main_activity_label"
                android:layout_marginBottom="10dp"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="15sp"
                android:text="@string/main_activity_hint"
        />

    </LinearLayout>

    <ListView
            android:id="@+id/scriptList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
    />

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/newScriptFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/add"
            android:elevation="8dp"
    />

    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            ads:adSize="BANNER"
            ads:adUnitId="@string/adUnitId">
    </com.google.android.gms.ads.AdView>

</FrameLayout>



